[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 60, 4 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "heavy_attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( -2, -0.5, -0.5 ),
"update": 0,
"values": [ 0.0, 22.5, 135.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "light_attack"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 135.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2D2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Node2D"]
visible = false
modulate = Color( 0.239216, 0.752941, 0.898039, 1 )
position = Vector2( 0, -40 )
rotation = -1.5708
mesh = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/RESET = SubResource( 5 )
anims/heavy_attack = SubResource( 6 )
anims/light_attack = SubResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 16 )
emitting = false
amount = 32
lifetime = 0.4
one_shot = true
local_coords = false
direction = Vector2( 1, -0.5 )
initial_velocity = 64.0
initial_velocity_random = 0.25
angle = 360.0
angle_random = 1.0
scale_amount = 4.0
color_ramp = SubResource( 8 )

[node name="CoyteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="SlideTimer" to="." method="_on_SlideTimer_timeout"]
